<resources>
    <string name="app_name">BMI حاسبة الوزن المثالي</string>
    <string name="wighte">الوزن "كيلو جرام" </string>
    <string name="high">الطول "سنتيميتر" </string>
    <string name="wrong_weight">يرجى إدخال قيمة صحيحة في الوزن أقل من 250kg</string>
    <string name="wrong_height">يرجى إدخال قيمة صحيحة في الطول أقل من 250cm</string>
    <string name="title">مؤشر كتلة الجسم هو</string>
    <string name="calc">إحسب كتلة الجسم</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tips">إرشادات صحية لتخفيف الوزن</string>
    <string name="tips2">نصائح صحية لتخفيف الوزن</string>
    <string name="tips1">1. تناول وجبات خفيفة</string>
    <string name="tips1_info">لا أحد يطلب منك التوقف عن تناول وجبات خفيفة تماما ولكن بدلا من ذلك تناول الطعام بذكاء، فالجميع بما فيهم أنت يعلم أن الوجبات السريعة من شأنه أن يضيف إلى وزنك الكثير وفى نفس الوقت أنت تشعر بالجوع كثيرا بين الوجبات الرئيسية لذلك ننصحك بتناول الوجبات الخفيفة الغنية بالبروتين مثل زبدة الفول السوداني والفواكه والمكسرات .</string>
    <string name="tips2_info">أثبتت الأبحاث أنه إذا كنت تستهلك العشاء الخاص بك (أو أي وجبة أخرى) أثناء مشاهدة التلفزيون، يمكنك أن تأكل ما يصل الى 40٪ سعرى حراري أكثر من المعتاد ، لاينصح بالأنشغال بمشاهدة التلفاز أو قراءة كتب أو غير ذلك أثناء تناول الطعام .</string>
    <string name="tips2_title">2. لاتتناول الطعام أثناء مشاهدة التلفاز</string>
    <string name="_40">أثبتت الأبحاث أنه إذا كنت تستهلك العشاء الخاص بك (أو أي وجبة أخرى) أثناء مشاهدة التلفزيون، يمكنك أن تأكل ما يصل الى 40٪ سعرى حراري أكثر من المعتاد ، لاينصح بالأنشغال بمشاهدة التلفاز أو قراءة كتب أو غير ذلك أثناء تناول الطعام .</string>
    <string name="sign_with">تسجيل الدخول عبر</string>
    <string name="signup_with">تسجيل عبر</string>
    <string name="forget_password">هل نسيت كلمة المرور ؟</string>
    <string name="password">كلمة المرور</string>
    <string name="username">إسم المستخدم</string>
    <string name="logl">logo</string>
    <string name="main_title">حاسبة الوزن المثالي</string>
    <string name="login">تسجيل الدخول</string>
    <string name="facebook_login">facebook login</string>
    <string name="google_login">google login</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="have_account"><u>هل لديك حساب بالفعل ؟</u></string>
    <string name="new_account">تسجيل حساب جديد</string>
    <string name="dob">العمر</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="title_activity_info">infoActivity</string>
    <string name="blblbl">النائب جمال الخضري ..‏٨٠٪ من مصانع ‎#غزة تم اغلاقها جزئياً أو كلياً بسبب الحصار وهذا الرقم مرشح للزيادة في حال استمر الاحتلال بتشديد الحصار وإغلاق معبر كرم ابو سالم امام اكثر من الف صنف من السلع النائب جمال الخضري ..‏٨٠٪ من مصانع ‎#غزة تم اغلاقها جزئياً أو كلياً بسبب الحصار وهذا الرقم مرشح للزيادة في حال استمر الاحتلال بتشديد الحصار وإغلاق معبر كرم ابو سالم امام اكثر من الف صنف من السلع النائب جمال الخضري ..‏٨٠٪ من مصانع ‎#غزة تم اغلاقها جزئياً أو كلياً بسبب الحصار وهذا الرقم مرشح للزيادة في حال استمر الاحتلال بتشديد الحصار وإغلاق معبر كرم ابو سالم امام اكثر من الف صنف من السلع النائب جمال الخضري ..‏٨٠٪ من مصانع ‎#غزة تم اغلاقها جزئياً أو كلياً بسبب الحصار وهذا الرقم مرشح للزيادة في حال استمر الاحتلال بتشديد الحصار وإغلاق معبر كرم ابو سالم امام اكثر من الف صنف من السلع</string>
    <string name="الوصف">بحساب الوزن المثالي معتمدا على طول الشخص و نقوم بإعطاء إراشادات صحية للمساعدة للوصول للوزن المثالي كما نقوم ب متابعة كل فرد بعد تسجيله و إرشادات خاصة من أطباء أكفاء هذا التطبيق يعمل على القيام بحساب الوزن المثالي معتمدا على طول الشخص و نقوم بإعطاء إراشادات صحية للمساعدة للوصول للوزن المثالي كما نقوم ب متابعة كل فرد بعد تسجيله و إرشادات خاصة من أطباء أكفاء</string>
    <string name="tips3">الإرشادات</string>
    <string name="_20">20</string>
    <string name="age">العمر:</string>
</resources>
