<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignupActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/paddings">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        style="@style/paddings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="2dp">

            <EditText
                android:id="@+id/username_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_perm_identity_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="text"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="2dp">

            <EditText
                android:id="@+id/dob_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/dob"
                android:inputType="date"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="2dp">

            <EditText
                android:id="@+id/email_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="2dp">

            <EditText
                android:id="@+id/password_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/have_account_tv"
            style="@style/paddings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily=""
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/have_account"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg"
            android:text="@string/new_account"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:paddingEnd="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingStart="4dp"
                android:text="@string/signup_with" />

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/fb_ib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/facbook_btn_bg"
                android:contentDescription="@string/facebook_login"
                android:src="@drawable/ic_facebook_logo" />

            <ImageButton
                android:id="@+id/gl_ib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/google_btn_bg"
                android:contentDescription="@string/google_login"
                android:src="@drawable/ic_001_google_plus" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>