<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/paddings">
            <TextView
                android:layout_gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        style="@style/paddings">
        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_012_weight_tool"
                android:drawablePadding="8dp"
                android:hint="@string/wighte"
                android:inputType="number"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_006_height_1"
                android:drawablePadding="8dp"
                android:hint="@string/high"
                android:inputType="number"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/title"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="120sp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="invisible" />
        <Button
            android:id="@+id/tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg"
            android:text="@string/calc"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>
    <!--<android.support.design.widget.TabLayout-->
        <!--android:id="@+id/tabs"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->

    <!--<View-->
        <!--android:id="@+id/divider2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="?android:attr/listDivider" />-->

    <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/view_pager"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1" >-->

    <!--</android.support.v4.view.ViewPager>-->

</LinearLayout>