<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".fragments.BmiFragment"
    tools:ignore="ExtraText">
        <LinearLayout
            style="@style/paddings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/logl"
                android:src="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="2dp">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_012_weight_tool"
                    android:drawablePadding="8dp"
                    android:hint="@string/wighte"
                    android:inputType="number"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="2dp">

                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_006_height_1"
                    android:drawablePadding="8dp"
                    android:hint="@string/high"
                    android:inputType="number"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:gravity="center"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/calc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_bg"
                android:text="@string/calc"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:text="سجل الدخول للمتابعة والحصول على النصائح"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:clickable="true"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
</ScrollView>
