<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/paddings"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            tools:ignore="UselessParent"
            android:visibility="visible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tips1"
                android:textColor="@android:color/black"
                style="@style/paddings"
                android:gravity="center"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tips1"
                android:contentDescription="@string/tips1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paddings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="4dp"
                android:text="@string/tips1_info"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            tools:ignore="UselessParent"
            android:visibility="visible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tips2_title"
                android:textColor="@android:color/black"
                style="@style/paddings"
                android:gravity="center"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tips2"
                android:contentDescription="@string/tips2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paddings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="4dp"
                android:text="@string/_40"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tips1"
                android:textColor="@android:color/black"
                style="@style/paddings"
                android:gravity="center"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tips1"
                android:contentDescription="@string/tips1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paddings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="4dp"
                android:text="@string/tips1_info"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tips1"
                android:textColor="@android:color/black"
                style="@style/paddings"
                android:gravity="center"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tips1"
                android:contentDescription="@string/tips1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paddings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="4dp"
                android:text="@string/tips1_info"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tips1"
                android:textColor="@android:color/black"
                style="@style/paddings"
                android:gravity="center"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tips1"
                android:contentDescription="@string/tips1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paddings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="4dp"
                android:text="@string/tips1_info"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tips1"
                android:textColor="@android:color/black"
                style="@style/paddings"
                android:gravity="center"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tips1"
                android:contentDescription="@string/tips1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/paddings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="4dp"
                android:text="@string/tips1_info"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>